--- a/agentic_exercises.ipynb
+++ b/agentic_exercises.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "MAX_ITERATIONS = 3\n",
     "\n",
-    "print(\"✅ AdaptiveReflectionState defined\")"
+    "print(\"AdaptiveReflectionState defined\")"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "Task: {state['task']}\n",
     "\n",
     "Provide a clear, complete, and accurate answer.\"\"\"\n",
-    "        print(\"\\n✍️ Generating initial draft...\")\n",
+    "        print(\"\\nGenerating initial draft...\")\n",
     "    else:\n",
     "        last_score = state[\"scores\"][-1]\n",
     "        prompt = f\"\"\"Improve this draft based on the quality feedback:\n",
@@ -144,7 +144,7 @@
     "Feedback: {last_score.feedback}\n",
     "\n",
     "Create an improved version that addresses the feedback and improves the scores.\"\"\"\n",
-    "        print(f\"\\n✍️ Refining (iteration {state['iterations']})...\")\n",
+    "        print(f\"\\nRefining (iteration {state['iterations']})...\")\n",
     "    \n",
     "    response = llm.invoke([HumanMessage(content=prompt)])\n",
     "    print(\"✓ Draft created\\n\")\n",
@@ -174,11 +174,11 @@
     "\n",
     "Also provide specific feedback on what needs improvement.\"\"\"\n",
     "    \n",
-    "    print(\"🔍 Evaluating draft...\")\n",
+    "    print(\"Evaluating draft...\")\n",
     "    score = llm_with_scoring.invoke([HumanMessage(content=prompt)])\n",
     "    \n",
-    "    print(f\"📊 Scores: Clarity={score.clarity}, Completeness={score.completeness}, Accuracy={score.accuracy}\")\n",
-    "    print(f\"📝 Feedback: {score.feedback[:100]}...\\n\")\n",
+    "    print(f\" Scores: Clarity={score.clarity}, Completeness={score.completeness}, Accuracy={score.accuracy}\")\n",
+    "    print(f\" Feedback: {score.feedback[:100]}...\\n\")\n",
     "    \n",
     "    return {\n",
     "        \"scores\": [score],\n",
@@ -188,15 +188,15 @@
     "# Node 3: Finalizer\n",
     "def adaptive_finalizer(state: AdaptiveReflectionState) -> dict:\n",
     "    \"\"\"Finalize output and show score progression.\"\"\"\n",
-    "    print(\"\\n✅ Reflection complete!\\n\")\n",
-    "    print(\"📈 Score Progression:\")\n",
+    "    print(\"\\n Reflection complete!\\n\")\n",
+    "    print(\" Score Progression:\")\n",
     "    for i, score in enumerate(state[\"scores\"]):\n",
     "        print(f\"  Iteration {i+1}: Clarity={score.clarity}, Completeness={score.completeness}, Accuracy={score.accuracy} (Avg: {score.average_score():.2f})\")\n",
     "    print()\n",
     "    \n",
     "    return {\"final_output\": state[\"draft\"]}\n",
     "\n",
-    "print(\"✅ Adaptive reflection nodes defined\")"
+    "print(\" Adaptive reflection nodes defined\")"
    ]
   },
   {
@@ -215,12 +215,12 @@
     "    \n",
     "    # Stop if all scores >= 4\n",
     "    if not last_score.needs_refinement():\n",
-    "        print(\"✨ All quality scores >= 4. Approved!\\n\")\n",
+    "        print(\" All quality scores >= 4. Approved!\\n\")\n",
     "        return \"finalizer\"\n",
     "    \n",
     "    # Stop if max iterations reached\n",
     "    if state[\"iterations\"] >= MAX_ITERATIONS:\n",
-    "        print(f\"⚠️ Max iterations ({MAX_ITERATIONS}) reached\\n\")\n",
+    "        print(f\" Max iterations ({MAX_ITERATIONS}) reached\\n\")\n",
     "        return \"finalizer\"\n",
     "    \n",
     "    return \"generator\"\n",
@@ -243,7 +243,7 @@
     "\n",
     "adaptive_reflection_agent = adaptive_builder.compile()\n",
     "\n",
-    "print(\"✅ Adaptive reflection agent created\")"
+    "print(\" Adaptive reflection agent created\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "})\n",
     "\n",
     "print(f\"\\n{'='*70}\")\n",
-    "print(\"📊 FINAL OUTPUT:\")\n",
+    "print(\" FINAL OUTPUT:\")\n",
     "print(f\"{'='*70}\")\n",
     "print(result[\"final_output\"])\n",
     "print(f\"\\nTotal iterations: {result['iterations']}\")\n",
@@ -325,11 +325,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "\n",
     "## Exercise 2: Plan-Execute + Reflection Hybrid\n",
-    "\n",
-    "Combine Plan-Execute and Reflection patterns for high-quality multi-step tasks."
+    "\n"
    ]
   },
   {
@@ -357,7 +356,7 @@
     "\n",
     "MAX_REFLECTIONS = 2\n",
     "\n",
-    "print(\"✅ HybridState defined\")"
+    "print(\" HybridState defined\")"
    ]
   },
   {
@@ -382,7 +381,7 @@
     "    steps = [line.strip() for line in lines if line.strip() and any(char.isdigit() for char in line[:3])]\n",
     "    \n",
     "    print(f\"\\n{'='*70}\")\n",
-    "    print(\"📋 PLAN CREATED:\")\n",
+    "    print(\" PLAN CREATED:\")\n",
     "    print(f\"{'='*70}\")\n",
     "    for step in steps:\n",
     "        print(f\"  {step}\")\n",
@@ -398,7 +397,7 @@
     "    \n",
     "    current_step = state[\"plan\"][state[\"current_step\"]]\n",
     "    \n",
-    "    print(f\"\\n⚙️ EXECUTING STEP {state['current_step'] + 1}:\")\n",
+    "    print(f\"\\n EXECUTING STEP {state['current_step'] + 1}:\")\n",
     "    print(f\"   {current_step}\")\n",
     "    \n",
     "    # Execute step\n",
@@ -435,7 +434,7 @@
     "{chr(10).join(state['results'])}\n",
     "\n",
     "Create a clear, complete response that addresses the original task.\"\"\"\n",
-    "        print(\"\\n✍️ GENERATING INITIAL DRAFT FROM RESULTS...\")\n",
+    "        print(\"\\n GENERATING INITIAL DRAFT FROM RESULTS...\")\n",
     "    else:\n",
     "        # Refinement based on critique\n",
     "        prompt = f\"\"\"Improve this draft based on the critique:\n",
@@ -447,7 +446,7 @@
     "Critique: {state['critique']}\n",
     "\n",
     "Create an improved version.\"\"\"\n",
-    "        print(f\"\\n✍️ REFINING DRAFT (iteration {state['reflection_iterations']})...\")\n",
+    "        print(f\"\\n REFINING DRAFT (iteration {state['reflection_iterations']})...\")\n",
     "    \n",
     "    response = llm.invoke([HumanMessage(content=prompt)])\n",
     "    print(\"   ✓ Draft created\\n\")\n",
@@ -467,7 +466,7 @@
     "If it's excellent, start with \"APPROVED:\".\n",
     "Otherwise, provide specific improvements needed.\"\"\"\n",
     "    \n",
-    "    print(\"🔍 CRITIQUING DRAFT...\")\n",
+    "    print(\" CRITIQUING DRAFT...\")\n",
     "    response = llm.invoke([HumanMessage(content=prompt)])\n",
     "    critique = response.content\n",
     "    \n",
@@ -481,11 +480,11 @@
     "# Node 5: Finalizer\n",
     "def hybrid_finalizer(state: HybridState) -> dict:\n",
     "    \"\"\"Finalize output.\"\"\"\n",
-    "    print(\"\\n✅ HYBRID AGENT COMPLETE!\\n\")\n",
+    "    print(\"\\n HYBRID AGENT COMPLETE!\\n\")\n",
     "    print(f\"Total reflection iterations: {state['reflection_iterations']}\\n\")\n",
     "    return {\"final_output\": state[\"draft\"]}\n",
     "\n",
-    "print(\"✅ Hybrid nodes defined\")"
+    "print(\" Hybrid nodes defined\")"
    ]
   },
   {
@@ -505,12 +504,12 @@
     "    \"\"\"Check if refinement needed.\"\"\"\n",
     "    # Stop if approved\n",
     "    if \"APPROVED\" in state.get(\"critique\", \"\").upper():\n",
-    "        print(\"   ✨ Draft approved!\\n\")\n",
+    "        print(\" Draft approved!\\n\")\n",
     "        return \"finalizer\"\n",
     "    \n",
     "    # Stop if max iterations\n",
     "    if state[\"reflection_iterations\"] >= MAX_REFLECTIONS:\n",
-    "        print(f\"   ⚠️ Max reflection iterations ({MAX_REFLECTIONS}) reached\\n\")\n",
+    "        print(f\"    Max reflection iterations ({MAX_REFLECTIONS}) reached\\n\")\n",
     "        return \"finalizer\"\n",
     "    \n",
     "    return \"generator\"\n",
@@ -545,7 +544,7 @@
     "\n",
     "hybrid_agent = hybrid_builder.compile()\n",
     "\n",
-    "print(\"✅ Hybrid agent created\")"
+    "print(\"Hybrid agent created\")"
    ]
   },
   {
@@ -586,41 +585,10 @@
     "})\n",
     "\n",
     "print(f\"\\n{'='*70}\")\n",
-    "print(\"📊 FINAL OUTPUT:\")\n",
+    "print(\"FINAL OUTPUT:\")\n",
     "print(f\"{'='*70}\")\n",
     "print(result[\"final_output\"])\n",
     "print(f\"{'='*70}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## Summary\n",
-    "\n",
-    "### Exercise 1: Adaptive Reflection\n",
-    "- ✅ Implemented structured quality scoring with Pydantic\n",
-    "- ✅ Tracks 3 metrics: Clarity, Completeness, Accuracy\n",
-    "- ✅ Refines only when scores < 4\n",
-    "- ✅ Visualizes score progression\n",
-    "\n",
-    "### Exercise 2: Hybrid Pattern\n",
-    "- ✅ Combined Plan-Execute and Reflection patterns\n",
-    "- ✅ Plans steps upfront\n",
-    "- ✅ Executes all steps\n",
-    "- ✅ Generates draft from results\n",
-    "- ✅ Critiques and refines output\n",
-    "- ✅ Produces high-quality final result\n",
-    "\n",
-    "### Key Insights\n",
-    "1. **Structured outputs** (Pydantic) enable precise control over agent behavior\n",
-    "2. **Patterns can be combined** to leverage strengths of each\n",
-    "3. **Multi-stage processing** (Plan → Execute → Reflect) produces higher quality results\n",
-    "4. **Visualization** helps understand agent behavior and improvements\n",
-    "\n",
-    "**🎉 Exercises Complete!**"
    ]
   }
  ],
